# more-rationals-math

./: CMakeLists.txt  LICENSE
more_rationals_math/: CMakeLists.txt  auxiliary.cpp  auxiliary.hpp  debugger.hpp  inverse_trigonometric_function.cpp  mathematical_constant.cpp  more_rationals_math.h  power_function.cpp  trigonometric_function.cpp
tests/: CMakeLists.txt  test_approx.hpp  test_arccos.cpp  test_arctan.cpp  test_cos.cpp  test_sin.cpp  test_sqrt.cpp  test_tan.cpp
